--- a/index.html
+++ b/index.html
@@ -1,80 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>VolShot Camera – Support</title>
+  <meta charset="UTF-8">
+  <title>VolShot Camera Support</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", "Helvetica Neue", Arial, sans-serif;
-    background-color: #000;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    text-align: center;
-}
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background-color: #f5f5f7;
+      color: #1d1d1f;
+      text-align: center;
+    }
 
-.container {
-    max-width: 500px;
-    padding: 20px;
-}
+    /* Top right badge container */
+    .top-bar {
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      padding: 20px;
+      box-sizing: border-box;
+    }
 
-.logo {
-    width: 120px;
-    margin-bottom: 20px;
-    border-radius: 20px;
-    filter: drop-shadow(0 0 10px rgba(255,255,255,0.2));
-}
+    .app-badge {
+      height: 50px;
+      transition: opacity 0.2s ease;
+    }
 
-h1 {
-    font-size: 28px;
-}
+    .app-badge:hover {
+      opacity: 0.8;
+    }
 
-p {
-    opacity: 0.8;
-}
+    .container {
+      padding: 40px 20px;
+    }
 
-a.button {
-    display: inline-block;
-    margin-top: 20px;
-    padding: 12px 24px;
-    background-color: #fff;
-    color: #000;
-    text-decoration: none;
-    border-radius: 8px;
-    font-weight: 600;
-}
+    .app-image {
+      max-width: 300px;
+      width: 90%;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease;
+    }
 
-.footer {
-    margin-top: 40px;
-    font-size: 14px;
-    opacity: 0.6;
-}
-</style>
+    .app-image:hover {
+      transform: scale(1.03);
+    }
+
+    h1 {
+      margin-top: 20px;
+    }
+
+    p {
+      font-size: 18px;
+    }
+
+    a {
+      color: #0071e3;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .bottom-badge {
+      margin-top: 25px;
+    }
+  </style>
 </head>
 
 <body>
-<div class="container">
 
-    <img src="volshotlogo.jpeg" alt="VolShot Camera Logo" class="logo">
+  <!-- Top Right App Store Badge -->
+  <header class="top-bar">
+    <a href="https://apps.apple.com/us/app/volshot-camera/id6759412979" target="_blank">
+      <img 
+        src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" 
+        alt="Download on the App Store"
+        class="app-badge">
+    </a>
+  </header>
+
+  <div class="container">
+
+    <!-- Clickable App Image -->
+    <a href="https://apps.apple.com/us/app/volshot-camera/id6759412979" target="_blank">
+      <img src="volshotlogo.jpeg" alt="VolShot Camera App" class="app-image">
+    </a>
 
     <h1>VolShot Camera Support</h1>
 
-    <p>Need help or have feedback? We're here to assist you.</p>
+    <p>
+      Need help? Contact us at 
+      <a href="mailto:kirk.king@kingbusinessholdings.com">
+        kirk.king@kingbusinessholdings.com
+      </a>
+    </p>
 
-    <a class="button" href="mailto:kirk.king@kingbusinessholdings.com">
-        Contact Support
-    </a>
-
-    <div class="footer">
-        <p><a href="privacy.html" style="color:#fff;">Privacy Policy</a></p>
-        <p>© 2026 VolShot Camera</p>
+    <!-- Centered App Store Badge -->
+    <div class="bottom-badge">
+      <a href="https://apps.apple.com/us/app/volshot-camera/id6759412979" target="_blank">
+        <img 
+          src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" 
+          alt="Download on the App Store"
+          class="app-badge">
+      </a>
     </div>
 
-</div>
+  </div>
+
 </body>
 </html>
