--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <style>
     body {
       margin: 0;
+      background-color: #000;
+      color: #fff;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background-color: #f5f5f7;
-      color: #1d1d1f;
       text-align: center;
     }
 
-    /* Top right badge container */
+    /* Top right badge */
     .top-bar {
       width: 100%;
       display: flex;
@@ -33,40 +33,42 @@
     }
 
     .container {
-      padding: 40px 20px;
+      padding: 60px 20px;
     }
 
     .app-image {
-      max-width: 300px;
+      max-width: 320px;
       width: 90%;
-      border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-      transition: transform 0.2s ease;
+      border-radius: 24px;
+      box-shadow: 0 20px 40px rgba(255,255,255,0.08);
+      transition: transform 0.25s ease;
     }
 
     .app-image:hover {
-      transform: scale(1.03);
+      transform: scale(1.04);
     }
 
     h1 {
-      margin-top: 20px;
+      margin-top: 30px;
+      font-weight: 600;
+      font-size: 32px;
     }
 
-    p {
-      font-size: 18px;
-    }
-
-    a {
-      color: #0071e3;
+    .support-button {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 14px 28px;
+      background-color: #fff;
+      color: #000;
       text-decoration: none;
+      border-radius: 12px;
+      font-weight: 600;
+      font-size: 16px;
+      transition: all 0.2s ease;
     }
 
-    a:hover {
-      text-decoration: underline;
-    }
-
-    .bottom-badge {
-      margin-top: 25px;
+    .support-button:hover {
+      background-color: #ddd;
     }
   </style>
 </head>
@@ -90,24 +92,12 @@
       <img src="volshotlogo.jpeg" alt="VolShot Camera App" class="app-image">
     </a>
 
-    <h1>VolShot Camera Support</h1>
+    <h1>VolShot Camera</h1>
 
-    <p>
-      Need help? Contact us at 
-      <a href="mailto:kirk.king@kingbusinessholdings.com">
-        kirk.king@kingbusinessholdings.com
-      </a>
-    </p>
-
-    <!-- Centered App Store Badge -->
-    <div class="bottom-badge">
-      <a href="https://apps.apple.com/us/app/volshot-camera/id6759412979" target="_blank">
-        <img 
-          src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" 
-          alt="Download on the App Store"
-          class="app-badge">
-      </a>
-    </div>
+    <!-- Hidden Email via Button -->
+    <a href="mailto:kirk.king@kingbusinessholdings.com" class="support-button">
+      Support
+    </a>
 
   </div>
 
