--- a/index.html
+++ b/index.html
@@ -1,105 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>VolShot Camera Support</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>VolShot Camera – Support</title>
 
-  <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      color: #fff;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      text-align: center;
-    }
+<style>
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", "Helvetica Neue", Arial, sans-serif;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    text-align: center;
+}
 
-    /* Top right badge */
-    .top-bar {
-      width: 100%;
-      display: flex;
-      justify-content: flex-end;
-      padding: 20px;
-      box-sizing: border-box;
-    }
+/* NEW: badge position (does not change your colors/backgrounds) */
+.top-right-badge {
+    position: fixed;
+    top: 16px;
+    right: 16px;
+    z-index: 999;
+}
 
-    .app-badge {
-      height: 50px;
-      transition: opacity 0.2s ease;
-    }
+.top-right-badge img {
+    height: 44px;
+    width: auto;
+}
 
-    .app-badge:hover {
-      opacity: 0.8;
-    }
+.container {
+    max-width: 500px;
+    padding: 20px;
+}
 
-    .container {
-      padding: 60px 20px;
-    }
+.logo {
+    width: 120px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    filter: drop-shadow(0 0 10px rgba(255,255,255,0.2));
+}
 
-    .app-image {
-      max-width: 320px;
-      width: 90%;
-      border-radius: 24px;
-      box-shadow: 0 20px 40px rgba(255,255,255,0.08);
-      transition: transform 0.25s ease;
-    }
+h1 {
+    font-size: 28px;
+}
 
-    .app-image:hover {
-      transform: scale(1.04);
-    }
+p {
+    opacity: 0.8;
+}
 
-    h1 {
-      margin-top: 30px;
-      font-weight: 600;
-      font-size: 32px;
-    }
+a.button {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 12px 24px;
+    background-color: #fff;
+    color: #000;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: 600;
+}
 
-    .support-button {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 14px 28px;
-      background-color: #fff;
-      color: #000;
-      text-decoration: none;
-      border-radius: 12px;
-      font-weight: 600;
-      font-size: 16px;
-      transition: all 0.2s ease;
-    }
-
-    .support-button:hover {
-      background-color: #ddd;
-    }
-  </style>
+.footer {
+    margin-top: 40px;
+    font-size: 14px;
+    opacity: 0.6;
+}
+</style>
 </head>
 
 <body>
 
-  <!-- Top Right App Store Badge -->
-  <header class="top-bar">
-    <a href="https://apps.apple.com/us/app/volshot-camera/id6759412979" target="_blank">
-      <img 
-        src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" 
-        alt="Download on the App Store"
-        class="app-badge">
-    </a>
-  </header>
+<!-- NEW: App Store badge in top-right -->
+<a class="top-right-badge"
+   href="https://apps.apple.com/us/app/volshot-camera/id6759412979"
+   target="_blank"
+   rel="noopener noreferrer"
+   aria-label="Get VolShot Camera on the App Store">
+    <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
+         alt="Download on the App Store">
+</a>
 
-  <div class="container">
+<div class="container">
 
-    <!-- Clickable App Image -->
-    <a href="https://apps.apple.com/us/app/volshot-camera/id6759412979" target="_blank">
-      <img src="volshotlogo.jpeg" alt="VolShot Camera App" class="app-image">
-    </a>
-
-    <h1>VolShot Camera</h1>
-
-    <!-- Hidden Email via Button -->
-    <a href="mailto:kirk.king@kingbusinessholdings.com" class="support-button">
-      Support
+    <!-- UPDATED: make the jpeg clickable to App Store -->
+    <a href="https://apps.apple.com/us/app/volshot-camera/id6759412979"
+       target="_blank"
+       rel="noopener noreferrer"
+       aria-label="Open VolShot Camera on the App Store">
+        <img src="volshotlogo.jpeg" alt="VolShot Camera Logo" class="logo">
     </a>
 
-  </div>
+    <h1>VolShot Camera Support</h1>
 
+    <p>Need help or have feedback? We're here to assist you.</p>
+
+    <a class="button" href="mailto:kirk.king@kingbusinessholdings.com">
+        Contact Support
+    </a>
+
+    <div class="footer">
+        <p><a href="privacy.html" style="color:#fff;">Privacy Policy</a></p>
+        <p>© 2026 VolShot Camera</p>
+    </div>
+
+</div>
 </body>
 </html>
